backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: banking-backend-deployment
  labels:
    app: banking-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: banking-backend

  template:
    metadata:
      labels:
        app: banking-backend

    spec:
      containers:
        - name: banking-backend
          image: banking-backend:latest

          ports:
            - containerPort: 8000

          imagePullPolicy: IfNotPresent
