frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-frontend-deployment
  labels:
    app: banking-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-frontend
  template:
    metadata:
      labels:
        app: banking-frontend

    spec:
      containers:
        - name: banking-frontend
          image: lenadeesh/banking-frontend:1.0.0
          ports:
            - containerPort: 3000

          imagePullPolicy: IfNotPresent
