postgres-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: banking-postgres

spec:
  serviceName: banking-postgres-service

  replicas: 1

  selector:
    matchLabels:
      app: banking-postgres

  template:
    metadata:
      labels:
        app: banking-postgres

    spec:
      containers:
        - name: banking-postgres
          image: postgres:17

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: banking-postgres-pvc
