backend-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: banking-backend-service

spec:
  selector:
    app: banking-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30001
  type: NodePort
