frontend-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: banking-frontend-service

spec:
  selector:
    app: banking-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

      nodePort: 30045


  type: NodePort
