postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: banking-postgres-service

spec:
  selector:
    app: banking-postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
